COMMERCE-2520 Fixed Minicart overlapping with LFR sidebars

--- a/commerce-theme-minium/commerce-theme-minium/src/css/minium/_variables.scss
+++ b/commerce-theme-minium/commerce-theme-minium/src/css/minium/_variables.scss
@@ -44,6 +44,7 @@ $liferay-topbar-size-small: 60px;
 $frame-size: 70px;
 $frame-size-small: 56px;
 $sidebar-width: 300px;
+$liferay-sidebars-width: 320px;
 $content-max-width: 1440px;
 
 $transition: ease 200ms;
@@ -51,7 +52,7 @@ $micro-transition: ease 100ms;
 
 $standard-radius: 8px;
 
-//breakpoints 
+//breakpoints
 
 $bp-xxsmall: 376px;
 $bp-xsmall: 577px;
